# 02516

./: .gitignore  README.md  pyproject.toml
project2/: datasets.py  late_fusion_fc.py  per_frame_model.py  plotting.py  train.py  train_late_fusion.py  train_per_frame_model.py  utils.py
project2/models/: cnn_2d_frame.py  dual_stream_network.py  early_fusion.py  late_fusion.py  per_frame.py  resnet_2d_frame.py  resnet_3d_18.py
project2/plots/: DualStreamResNet_training_results_history.npz  EarlyFusionCNN_training_results_history.npz  LateFusionMLP_training_results_history.npz  LateFusionPool_training_results_history.npz  LateFusionPool_withleak_training_results_history.npz  PerFrameModel_training_results_history.npz  ResNet3D18_training_results_history.npz
project2/plots_no_leakage/: DualStreamResNet_training_results_history_no_leakage.json  DualStreamResNet_training_results_history_no_leakage.npz  EarlyFusionCNN_training_results_history_no_leakage.json  EarlyFusionCNN_training_results_history_no_leakage.npz  LateFusionMLP_training_results_history_no_leakage.json  LateFusionMLP_training_results_history_no_leakage.npz  LateFusionPool_training_results_history_no_leakage.json  LateFusionPool_training_results_history_no_leakage.npz  PerFrameModel_training_results_history_no_leakage.json  PerFrameModel_training_results_history_no_leakage.npz  ResNet3D18_training_results_history_no_leakage.json  ResNet3D18_training_results_history_no_leakage.npz
project3/: datasets.py  plotting.py  run_experiments.py  samples.ipynb  train.py  utils.py
project3/models/: cnn.py  unet.py
(+30 files in other folders)
