[project]
name = "02516"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchcodec>=0.8.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["project2*", "project3*"]